--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -40,3 +40,9 @@
 .read-the-docs {
   color: #888;
 } */
+
+* {
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+}
